--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a {
     font-size: 18px;
     color: #a39a9a;
     text-align: center;
-    background-color: white;
+    background-color: #ffffff;
 }
 
 hr {
